# Rasterizer

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Core/: Application.cpp  Application.h  Color.cpp  Color.h  Core.h  EntryPoint.h  GraphicsContext.cpp  GraphicsContext.h  Layer.h  LayerStack.cpp  LayerStack.h  Texture.cpp  Texture.h  Time.h  Window.cpp  Window.h
Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Core/Input/: ApplicationEvent.h  Event.h  Input.cpp  Input.h  KeyEvent.h  Keyboard.h  Mouse.h  MouseEvent.h
Core/Math/: Common.h  Constants.h  Exponential.h  Limits.h  Matrix.h  MatrixCommon.h  Projections.h  Quaternion.h  QuaternionCommon.h  Random.cpp  Random.h  Transforms.h  Trigonometric.h  Vector.h  VectorCommon.h  VectorExponential.h  VectorTrigonometric.h
Core/Math/SIMD/: Platform.h  VectorCommon_simd.h  VectorExponential_simd.h
Core/Math/SIMD/TypesImpl/: MatrixRelational_simd.h  Vector4float_simd.h  VectorRelational_simd.h
Core/Math/TypesImpl/: Matrix.h  Matrix4.h  Quaternion.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
Core/Platform/GLFW/: GLFWInput.h  GLFWWindow.h
Core/Platform/OpenGL/: GLGraphicsContext.cpp  GLGraphicsContext.h  GLHelpers.h  GLImGuiLayerImpl.cpp  GLImGuiLayerImpl.h  GLTexture2D.cpp  GLTexture2D.h
Rasterizer/: CMakeLists.txt  imgui.ini
Rasterizer/Source/: AppLayer.cpp  AppLayer.h  ApplicationExample.cpp  Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  LayerExample.cpp  LayerExample.h  Pixel.h  Rasterizer.cpp  Rasterizer.h  RasterizerApp.cpp  RenderTarget.cpp  RenderTarget.h  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Utils.h
